// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute price endpoint rest should return success 1`] = `
Object {
  "data": Object {
    "result": 24.25,
  },
  "result": 24.25,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": Any<Number>,
    "providerDataRequested": Any<Number>,
  },
}
`;

exports[`execute price endpoint websocket should return success 1`] = `
Object {
  "data": Object {
    "result": 166.91,
  },
  "result": 166.91,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1668165071111,
    "providerDataStreamEstablished": 1668165071111,
    "providerIndicatedTime": 1646336888,
  },
}
`;
